# course_work_4

./: README.md  main.py  pyproject.toml
src/: JSON_processor.py  functions.py  vacancies_API.py  vacancy.py
